--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.4",
+    "@types/mongodb": "^3.5.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
@@ -19,6 +20,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.7.8",
     "@types/node": "^13.11.0"
   }
 }
