--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.4",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.11.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.11.0"
   }
 }
