--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "class-validator": "^0.11.1",
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
