--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.2",
     "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
