--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,8 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint *.js **/*.js",
-    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001' && expo start",
-    "postinstall": "rndebugger-open"
+    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001' && expo start"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
@@ -17,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^5.1.8",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "dotenv": "^8.2.0",
     "expo": "~37.0.3",
     "expo-font": "^8.1.0",
     "prop-types": "^15.7.2",
@@ -24,6 +24,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-debugger-open": "^0.3.24",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.8.0",
